--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: hotwater
-Title: autoreload plumber APIs
+Title: Live Reload for Plumber APIs
 Version: 0.0.0.9002
 Authors@R:
     person("Elian", "Thiele-Evans", , "elianhte@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8008-3165"))
-Description: What the package does (one paragraph).
+Description: Enhances development for plumber APIs by enabling live reloading. Monitors API files for changes and automatically refreshes the server and connected web clients, allowing for faster API iteration.
 License: GPL (>= 3)
 URL: https://github.com/ElianHugh/hotwater
 BugReports: https://github.com/ElianHugh/hotwater/issues
@@ -19,9 +19,7 @@ Imports:
 Suggests:
     box,
     docopt,
-    remotes,
     testthat (>= 3.0.0),
-    xml2,
     withr
 Config/testthat/edition: 3
 Encoding: UTF-8
