--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            comment = c(ORCID = "0000-0001-8008-3165"))
 Description: Enhances development for plumber APIs by enabling live reloading. Monitors API files for changes and automatically refreshes the server and connected web clients, allowing for faster API iteration.
 License: GPL (>= 3)
-URL: https://github.com/ElianHugh/hotwater
+URL: https://github.com/ElianHugh/hotwater, https://elianhugh.github.io/hotwater/
 BugReports: https://github.com/ElianHugh/hotwater/issues
 Imports:
     cli,
