--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: hotwater
 Title: Live Reload for Plumber APIs
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R:
     person("Elian", "Thiele-Evans", , "elianhte@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8008-3165"))
@@ -16,7 +16,8 @@ Imports:
     mirai,
     plumber (>= 0.4.0),
     utils,
-    stats
+    stats,
+    jsonlite
 Suggests:
     box,
     docopt,
