--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,6 @@ Imports:
     httr2,
     nanonext,
     mirai,
-    plumber (>= 0.4.0),
     utils,
     stats,
     jsonlite
@@ -22,7 +21,9 @@ Suggests:
     box,
     docopt,
     testthat (>= 3.0.0),
-    withr
+    withr,
+    plumber (>= 0.4.0),
+    plumber2
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
